# EasyScript

./: .gitignore  LICENSE  MANIFEST.in  OPERATOR_PRECEDENCE.md  README.md  easyscript.py  pyproject.toml  setup.py  test_custom_attributes.py  test_user_changes.py  test_user_class.py
easyscript/: __init__.py  __main__.py  easyscript.py
easyscript_examples/: demo.es  simple.es  test.es
examples/: demo.es  simple.es  ternary_operator_examples.txt  test.es  test_else.es  variable_assignment.es
playground/: demonstrate_returns.py  simplified_evaluate_example.py  test_comments.py  test_edge_cases.py  test_return_values.py  test_unified_evaluate.py
playground/http_server/: easyscript_http_server.py  http_server.es  simple_http.py
tests/: README.md  run_tests.py  test_easyscript.py  test_easyscript_comprehensive.py  test_easyscript_user.py  test_easyscript_user_legacy.py  test_helpers.py  test_if_else.py
